2005-11-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:
	* data/glade/prefs-dialog.glade:
	* data/glade/print.glade:
	* src/pdm-dialog.c: (pdm_dialog_response_cb), (pdm_dialog_init):
	* src/prefs-dialog.c: (setup_add_language_dialog),
	(prefs_dialog_init):

	Don't put the prefs/pdm dialogue over all windows. Make the
	add-language dialogue modal to the prefs dialogue.

2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Allow compilation against xulrunner. Patch by
	Robert O'Callahan <rocallahan@novell.com>.

2005-11-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialog.cpp:

	Scroll the view so the selected cert is visible. Fixes bug #320758.

2005-10-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-history-window.c: (cmd_bookmark_link):

	Use the history window as parent for the new-bookmark dialogue.
	Fixes bug #320329.

2005-10-22  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime type.

2005-10-20  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):
	* lib/ephy-stock-icons.h:
	* src/ephy-fullscreen-popup.c: (ephy_fullscreen_popup_constructor):
	* src/ephy-toolbar.c: (ephy_toolbar_constructor):
	* src/ephy-window.c:

	Remove fullscreen and leave-fullscreen stock icons; they're available
	in gtk+ since 2.8.

2005-10-14  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed.cpp:

	Work around mozilla bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=312241 .

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Check that 'toplevel' with GTK_WIDGET_TOPLEVEL.

2005-10-03  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:
	
	Post-release version bump.
		
2005-10-03  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.8.2 ===

	* NEWS:

2005-10-03  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-state.c: (paned_sync_position_cb),