@@ -1,3 +1,10 @@
+2005-11-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/pdm-dialog.c:
+
+	Set the model's sort column only after filling it. Vastly improves
+	delay when opening the PDM dialogue when you have many cookies.
+
 2005-11-15  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/glade/epiphany.glade:
